demo-app/content-api-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-api-v2
  labels:
    app: content-api-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-api-v2
  template:
    metadata:
      labels:
        app: content-api-v2
    spec:
      containers:
      - name: content-api-v2
        image: acrwthcc.azurecr.io/content-api:v2
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: '0.5'
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: content-api
  labels:
    app: content-api-v2
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    app: content-api-v2
