demo-app/content-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-api
  labels:
    app: content-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-api
  template:
    metadata:
      labels:
        app: content-api
    spec:
      containers:
      - name: content-api
        image: acrk8sargocd.azurecr.io/content-api:v1 # change to v1
        ports:
        - containerPort: 3001
        # env:
        # - name: MONGODB_CONNECTION
          # value: mongodb://mongodb:27017/contentdb
---
apiVersion: v1
kind: Service
metadata:
  name: content-api
  labels:
    app: content-api
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    app: content-api
