demo-app/content-web-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-web-v2
  labels:
    app: content-web-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-web-v2
  template:
    metadata:
      labels:
        app: content-web-v2
    spec:
      containers:
      - name: content-web-v2
        image: acrk8sargocd.azurecr.io/content-web:v2
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: content-web
  annotations: 
    service.beta.kubernetes.io/azure-dns-label-name: content-wth-web2-cc2
  labels:
    app: content-web-v2
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: content-web-v2
