demo-app/content-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-web
  labels:
    app: content-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-web
  template:
    metadata:
      labels:
        app: content-web
    spec:
      containers:
      - name: content-web
        image: acrk8sargocd.azurecr.io/content-web:v2 # change to v2
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: content-web
  labels:
    app: content-web
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: content-web
