demo-app/ingress.yaml
# updated service for content-web, to be used by nginx ingress controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: content-wth-web2-cc2.northeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: content-web
            port:
              number: 80
        path: /
        pathType: Prefix
